Add clearfix CSS

--- a/columnClasses.css
+++ b/columnClasses.css
@@ -55,6 +55,33 @@
 }
 
 
+/*
+Clear fix for column classes
+--------------------------------------------- */
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+.clearfix {
+    display: inline-block;
+    width: 100%;
+}
+
+html[xmlns] .clearfix {
+    display: block;
+}
+
+* html .clearfix {
+    height: 1%;
+}
+
+
 /* Media Queries
 --------------------------------------------- */
 
